[package]
name = "assets_precompile"
version = "6.0.0-beta.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
ink_precompiles = { version = "6.0.0-beta.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }
ink_sandbox = { git = "https://github.com/use-ink/ink", branch = "6.0.0-beta.1" }
hex = "0.4"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_precompiles/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]

