[package]
name = "conditional-compilation"
version = "6.0.0-beta.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
# user-defined features
foo = []
bar = []

[package.metadata.ink-lang]
abi = "ink"
