[package]
name = "contract_terminate"
version = "6.0.0-beta"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]

ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
