[package]
name = "contract_transfer"
version = "6.0.0-alpha.3"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3", default-features = false }

[dev-dependencies]
#ink_e2e = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3" }
ink_e2e = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3", features = ["sandbox"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
