[package]
name = "contract_transfer"
version = "6.0.0-beta.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1"}
ink_sandbox = { git = "https://github.com/use-ink/ink", branch = "6.0.0-beta.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
