[package]
name = "custom-allocator"
version = "5.0.0-rc"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
# We're going to use a different allocator than the one provided by ink!. To do that we
# first need to disable the included memory allocator.
ink = { version = "5.0.0-rc", default-features = false, features = ["no-allocator"]  }

# This is going to be our new global memory allocator.
dlmalloc = {version = "0.2", default-features = false, features = ["global"] }

[dev-dependencies]
ink_e2e = { version = "5.0.0-rc" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
