[package]
name = "custom-environment"
version = "6.0.0-beta"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

# Assumes that the node used in E2E testing allows for at least 6 event topics.
permissive-node = []

[package.metadata.ink-lang]
abi = "ink"
