[package]
name = "debugging_strategies"
description = "Illustrates different debugging strategies"
version = "6.0.0-beta.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta", default-features = false }
flipper = { path = "../flipper/", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
debug = []

[package.metadata.ink-lang]
abi = "ink"
