[package]
name = "e2e_call_runtime"
version = "5.0.0-rc.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.0.0-rc.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0-rc.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
