[package]
name = "e2e_call_runtime"
version = "6.0.0-alpha"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
