[package]
name = "flipper"
version = "5.1.0"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.0" }
hex = { version = "0.4.3" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
