[package]
name = "fuzz_testing"
version = "6.0.0-beta"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta" }
ink_sandbox = { git = "https://github.com/use-ink/ink", branch = "6.0.0-beta" }

# for fuzz testing
quickcheck = { version = "1" }
quickcheck_macros = { version = "1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
