[package]
name = "incrementer"
version = "6.0.0-alpha.3"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []

[package.metadata.ink-lang]
abi = "ink"
