[package]
name = "mapping"
version = "5.1.0"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink.git", branch = "master", version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink.git", branch = "master", version = "6.0.0-alpha", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
