[package]
name = "multi-contract-caller"
version = "6.0.0-alpha"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

adder = { path = "adder", default-features = false, features = ["ink-as-dependency"] }
subber = { path = "subber", default-features = false, features = ["ink-as-dependency"] }
accumulator = { path = "accumulator", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-alpha", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "adder/std",
    "subber/std",
    "accumulator/std",
]
ink-as-dependency = []
e2e-tests = []

[workspace]
members = [
    "accumulator",
    "adder",
    "subber",
]
