[package]
name = "own-code-hash"
version = "4.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2024"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.4", default-features = false }
# todo remove scale in favor of ink::scale
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.4" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
