[package]
name = "own-code-hash"
version = "4.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2024"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
# todo remove scale in favor of ink::scale
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
