[package]
name = "static-buffer"
version = "5.1.0"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-alpha", default-features = false }

[lib]
path = "lib.rs"
doctest = false

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
