[package]
name = "vesting"
version = "5.1.0"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std", 
]
ink-as-dependency = []

