[package]
name = "wildcard-selector"
version = "6.0.0-alpha.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.1", default-features = false }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
emit-event = ["ink/unstable-hostfn"]

[package.metadata.ink-lang]
abi = "ink"
